chore: add scripts for spinning up local db

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,3 +1,4 @@
+spring.datasource.driverClassName     = com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.datasource.password            = PMadmin42
 spring.datasource.url                 = jdbc:sqlserver://localhost;databaseName=Sandbox
 spring.datasource.username            = sa
