--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,10 +1,13 @@
-spring.datasource.driverClassName     = com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.datasource.password            = PMadmin42
-spring.datasource.url                 = jdbc:sqlserver://localhost;databaseName=Sandbox
-spring.datasource.username            = sa
+spring.datasource.driverClassName             = com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.datasource.password                    = PMadmin42
+spring.datasource.url                         = jdbc:sqlserver://localhost;databaseName=Sandbox
+spring.datasource.username                    = sa
 
-spring.flyway.enabled                 = true
-spring.flyway.password                = PMadmin42
-spring.flyway.schemas                 = spenserca
-spring.flyway.url                     = jdbc:sqlserver://localhost;databaseName=Sandbox
-spring.flyway.user                    = sa
+spring.flyway.enabled                         = true
+spring.flyway.password                        = PMadmin42
+spring.flyway.schemas                         = spenserca
+spring.flyway.url                             = jdbc:sqlserver://localhost;databaseName=Sandbox
+spring.flyway.user                            = sa
+
+spring.jpa.hibernate.naming.physical-strategy = org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.show-sql                           = true
