feat: add teammate table

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -8,6 +8,7 @@ spring.flyway.password                        = PMadmin42
 spring.flyway.schemas                         = spenserca
 spring.flyway.url                             = jdbc:sqlserver://localhost;databaseName=Sandbox
 spring.flyway.user                            = sa
+spring.flyway.validate-on-migrate             = false
 
 spring.jpa.hibernate.naming.physical-strategy = org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.show-sql                           = true
