--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -12,3 +12,4 @@ spring.flyway.validate-on-migrate             = false
 
 spring.jpa.hibernate.naming.physical-strategy = org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.show-sql                           = true
+spring.jpa.open-in-view                       = false
