chore: run app on different port to avoid collisions

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,3 +1,5 @@
+server.port                                   = 1337
+
 spring.datasource.driverClassName             = com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.datasource.password                    = PMadmin42
 spring.datasource.url                         = jdbc:sqlserver://localhost;databaseName=Sandbox
