--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,17 +1,18 @@
 server.port                                   = 1337
 
-spring.datasource.driverClassName             = com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.datasource.password                    = PMadmin42
-spring.datasource.url                         = jdbc:sqlserver://localhost;databaseName=Sandbox
+spring.datasource.driverClassName             = org.h2.Driver
+spring.datasource.password                    = password
+spring.datasource.url                         = jdbc:h2:mem:Sandbox
 spring.datasource.username                    = sa
 
 spring.flyway.enabled                         = true
-spring.flyway.password                        = PMadmin42
-spring.flyway.schemas                         = spenserca
-spring.flyway.url                             = jdbc:sqlserver://localhost;databaseName=Sandbox
+spring.flyway.password                        = password
+#spring.flyway.schemas                         = SPENSERCA
+spring.flyway.url                             = jdbc:h2:mem:Sandbox
 spring.flyway.user                            = sa
 spring.flyway.validate-on-migrate             = false
 
 spring.jpa.hibernate.naming.physical-strategy = org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.show-sql                           = true
 spring.jpa.open-in-view                       = false
+spring.jpa.hibernate.ddl-auto                 = none
